<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Potostop</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="ok">Good !</string>
    <string name="destination">Destination</string>
    <string name="title_activity_profile" translatable="false">ProfileActivity</string>
    <string name="nav_trip_label">Trip</string>
    <string name="nav_profile_label">Profile</string>
    <string name="separator_options">Options</string>
    <string name="nav_settings_label">Settings</string>
    <string name="nav_about_label">About</string>
    <string name="nav_logout_label">Log out</string>
    <string name="profile_fullname_label">Fullname</string>
    <string name="profile_sex_label">Title</string>
    <string name="profile_birthdate_label">Birthdate</string>
    <string name="profile_birthdate_btn_label">Set birthdate</string>
    <string name="profile_emergency_phone_label">Emergency person phone</string>
    <string name="profile_emergency_mail_label">Emergency person e-mail</string>
    <string name="profile_error_fullname_empty">The fullname field is required</string>
    <string name="profile_error_date_empty">The date field is required</string>
    <string name="profile_error_phone_empty">The emergency phone field is required</string>
    <string name="profile_error_mail_empty">The emergency mail field is required</string>
    <string name="profile_save_message">Profile saved!</string>

    <string-array name="profile_sex_array">
        <item>Mr</item>
        <item>Mme</item>
    </string-array>
    <string name="label_google_login">Google Sign-In</string>
    <string name="label_logout_button">Signed out</string>
    <string name="startTrip">Start Trip !</string>
    <string name="title_activity_test" translatable="false">testActivity</string>
    <string name="about_text">
        "This application was created for the module 645-2.\n\n
        With Potostop, you can secure your hitchhiking trip.\n\n
        &#169; 2018"\n\n
        Created by :
        "This application was created for the module 645-2.\n\nWith Potostop, you can securise your hitchhiking trip.\n\n
        Created by :\n
         -Gaétan Huser\n
         -Hugo Rebelo\n
         -Julien Reichenbach\n
         -Fabien Terrani\n
         -Vlado Mitrovic\n
         -Sylvain Roh\n
        &#169; 2018"
    </string>
    <string name="autocomplete_hint">Search</string>
    <string name="clear_text">Select</string>
    <string name="selected_place">Last selected</string>

    <!-- Waiting End of Trip Activity -->
    <string name="eot_title_activity">Trip in progress</string>
    <string name="eot_label_arrival_time">Arrival time</string>
    <string name="eot_button_end_trip">End trip</string>


    <string name="plate_registering">Plate registering</string>
    <string name="plate_number">Plate Number</string>
    <string name="go">Go</string>
    <string name="canton">Canton</string>

    <string-array name="cantons">
        <item>AG</item>
        <item>AI</item>
        <item>AR</item>
        <item>BE</item>
        <item>BL</item>
        <item>BS</item>
        <item>FR</item>
        <item>GE</item>
        <item>GL</item>
        <item>GR</item>
        <item>JU</item>
        <item>LU</item>
        <item>NE</item>
        <item>NW</item>
        <item>OW</item>
        <item>SG</item>
        <item>SH</item>
        <item>SO</item>
        <item>SZ</item>
        <item>TG</item>
        <item>TI</item>
        <item>UR</item>
        <item>VD</item>
        <item>VS</item>
        <item>ZG</item>
        <item>ZH</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="report">Report a behaviour</string>
    <string name="pleaseRateTrip">How was your trip ?</string>
    <string name="ratingTripActivity">How was your trip ?</string>

    <string name="toast_could_not_sign_in">Impossible to sign in. Email or password invalid.</string>
    <string name="email_label">Email address</string>
    <string name="password_label">Password</string>
    <string name="label_login_button">Log in</string>
    <string name="label_create_account">New account</string>
    <string name="label_mail_error">Invalid email</string>
    <string name="label_password_error">Invalid password</string>
    <string name="register_failed">Registering failed. Check the email or the password.</string>
    <string name="potostop_logo">Official logo</string>
    <string name="toast_invalid_password">Invalid password.</string>
    <string name="toast_invalid_email">Invalid email.</string>
    <string name="toast_could_not_log_in">Login failed. Email or password is incorrect.</string>


    <string name="report_Your_Trip">Report your Trip</string>
    <string name="error_report_text">What happened ?</string>

    <string name="noGPSgranted">To use this service, you have to grant the acess to the location</string>
    <string name="toast_user_already_exists">User already exists.</string>
    <string name="plate_registering_instructions">Type the plate number of your driver below (letters and numbers only)</string>
    <string name="plate_number_hint">Driver\'s plate number - VS 12345</string>
    <string name="plate_picture_instructions">If you want, you can take a picture of the driver\'s plate</string>
    <string name="take_plate_picture">Take a picture of the plate</string>
    <string name="welcome_title">Welcome in Potostop!</string>
    <string name="welcome_text">We are ready to secure your trip :)</string>
    <string name="noCameraGranted">Potostop cannot access the camera</string>
    <string name="report_plate_number">Plate number</string>
    <string name="location_instructions">Type your destination in the above field. This way, Potostop knows where you are supposed to arrive.</string>
    <string name="title_notif_trip" translatable="false">Trip in process</string>
    <string name="eot_button_alert">Toggle alert</string>
    <string name="noSMSgranted">You need to allow the app to send SMS to alert your emergency contact</string>
    <string name="toast_need_permissions">GPS and SMS permissions are required to launch the app</string>
    <string name="toast_emergency_sms_send">Alert succesfully sent</string>
    <string name="toast_emergency_sms_failure">Alert failure</string>
    <string name="profile_error_phone_error">Phone invalid</string>
    <string name="manual_alert_title">Alert about to be sent</string>
    <string name="manual_alert_message">Do you want to alert your emergency contact ?</string>
    <string name="manual_alert_yes">Send alert</string>
    <string name="manual_alert_no">Cancel</string>
    <string name="toast_alert_sent">Alert has been sent</string>
</resources>
