<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.FragmentStart">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/potostop_logo"
            android:src="@drawable/ic_logo_no_text" />

        <TextView
            android:id="@+id/tvWelcomeTitle"
            style="@style/PotostopTheme.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:layout_marginLeft="@dimen/spacingMedium"
            android:layout_marginRight="@dimen/spacingMedium"
            android:text="@string/welcome_title"
            android:textAlignment="center"
            android:textSize="@dimen/textMedium" />

        <TextView
            android:id="@+id/tvWelcomeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spacingGiant"
            android:layout_marginTop="@dimen/spacingSmall"
            android:layout_marginRight="@dimen/spacingGiant"
            android:layout_marginBottom="@dimen/spacingGiant"
            android:text="@string/welcome_text"
            android:textAlignment="center" />

        <Button
            android:id="@+id/buttonStartTrip"
            style="@style/PotostopTheme.ButtonBig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/startTrip" />
    </LinearLayout>

</FrameLayout>