<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReportActivity"
    android:orientation="vertical"
    android:layout_gravity="top"
    android:id="@+id/report_trip_activity_layout"
    >

        <TextView
            android:id="@+id/reportYourTrip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:layout_marginTop="35dp"
            android:textAlignment="center"
            android:textSize="20sp"
            android:text="@string/report_Your_Trip"/>

    <EditText
        android:id="@+id/editPlateNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/report_plate_number" />

    <EditText
        android:id="@+id/editTextReport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine"
        android:hint="@string/report"
        android:minLines="2"
                />


    <Button
        android:id="@+id/reportButton"
        android:layout_width="200dp"
        android:layout_height="90dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@color/colorPrimary"
        android:onClick="clickReport"
        android:text="@string/report"
        android:textColor="@android:color/white" />

</LinearLayout>