<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WaitingEoTActivity"
    android:orientation="vertical"
    android:layout_gravity="top"
    android:id="@+id/rating_trip_activity_layout"
    >


        <TextView
            android:id="@+id/pleaseRateTrip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_marginBottom="25dp"
            android:textAlignment="center"
            android:textSize="20sp"
            android:text="@string/pleaseRateTrip" />

        <TextView
            android:id="@+id/dateTrip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:textAlignment="center"
            android:textSize="20sp"
            android:text="Date" />

        <TextView
            android:id="@+id/itineraryTrip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:textAlignment="center"
            android:textSize="20sp"
            android:text="Trajet" />

        <Button
            android:id="@+id/button_ok"
            android:layout_width="200dp"
            android:layout_height="90dp"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:background="@color/colorPrimary"
            android:text="@string/ok"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/buttonReport"
            android:layout_width="200dp"
            android:layout_height="90dp"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:background="@color/colorPrimary"
            android:text="@string/report"
            android:textColor="@android:color/white" />
    </LinearLayout>
